Change height in .information to auto to fix overlap of items

--- a/style.css
+++ b/style.css
@@ -96,7 +96,7 @@ button {
 
 .information {
     text-align: center;
-    height: 300px;
+    height: auto;
 }
 
 .info-header {
